--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=localhost\\SQLEXPRESS01;Initial Catalog=Samit_For_EntertainmentDB;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
