--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=localhost\\SQLEXPRESS01;Initial Catalog=Samit_For_EntertainmentDB;Integrated Security=True"
+    "DefaultConnectionString": "Data Source=localhost\\SQLEXPRESS01;Initial Catalog=Samit_For_EntertainmentDB;Integrated Security=True;TrustServerCertificate=true"
   },
   "AllowedHosts": "*"
 }
